Поменял название метода, добавил маппер для конвертации Entity сущностей в соответствующие им Dto объекты.