@@ -8,6 +8,7 @@ import ru.naumen.enterprisejavacourse.financetracker.database.model.Transaction;
 import ru.naumen.enterprisejavacourse.financetracker.database.repository.TransactionRepository;
 import ru.naumen.enterprisejavacourse.financetracker.dto.TransactionDto;
 import ru.naumen.enterprisejavacourse.financetracker.exception.TransactionNotFoundException;
+import ru.naumen.enterprisejavacourse.financetracker.mapper.TransactionMapper;
 import ru.naumen.enterprisejavacourse.financetracker.service.TransactionService;
 
 import java.math.BigDecimal;
@@ -15,7 +16,6 @@ import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -53,13 +53,13 @@ public class TransactionServiceImpl implements TransactionService {
     }
 
     @Override
-    public List<TransactionDto> filterAndSortTransactionsByDate(LocalDateTime startDate, LocalDateTime endDate) {
+    public List<TransactionDto> findBetweenDatesAndSortByAmount(LocalDateTime startDate, LocalDateTime endDate) {
         List<Transaction> transactions = transactionRepository.findByCreatedAtBetween(startDate, endDate);
         transactions.sort(Comparator.comparing(Transaction::getAmount));
 
         return transactions.stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .map(TransactionMapper.INSTANCE::transactiontoTransactionDto)
+                .toList();
     }
 
     /**
@@ -77,15 +77,5 @@ public class TransactionServiceImpl implements TransactionService {
         transaction.setAmount(amount);
 
         transactionRepository.save(transaction);
-    }
-
-    private TransactionDto convertToDto(Transaction transaction) {
-        return new TransactionDto(
-                transaction.getId(),
-                transaction.getCategory().getId(),
-                transaction.getBankAccount().getId(),
-                transaction.getAmount(),
-                transaction.getCreatedAt()
-        );
     }
 }
